# tasknote

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: board.rs  cli.rs  display.rs  item.rs  main.rs  storage.rs  tui.rs
