[package]
name = "tasknote"
version = "0.1.0"
edition = "2021"
description = "A fast CLI + TUI task and note manager"
license = "MIT"
repository = "https://github.com/ArielSantos01/tasknote"
homepage = "https://github.com/ArielSantos01/tasknote"
keywords = ["task", "notes", "tui", "cli", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "tasknote"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
ratatui = "0.28"
crossterm = "0.28"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rustyline = "14.0"
